# typemach

./: .gitignore  Cargo.toml  LICENSE  PROJECT_CONSTRAINTS.md  README.md  flake.nix
crates/typemach-agent/: Cargo.toml
crates/typemach-agent/src/: context.rs  deepseek.rs  deepseek_stream.rs  lib.rs  types.rs
crates/typemach-agent/tests/: agent.rs  deepseek.rs
examples/: minimal_llm.rs
src/: checkpoint.rs  checkpoint_pg.rs  error.rs  lib.rs  lifecycle.rs  lifecycle_tests.rs  machine.rs  op.rs  pg.rs  registry.rs  run.rs  runner.rs  runner_tests.rs  runtime.rs  runtime_tests.rs  sqlite.rs  store.rs  testkit.rs
src/lifecycle_tests/: control.rs  events.rs
src/pg/: io.rs  lease.rs  op.rs  tests.rs  tx.rs
src/pg/op/: entry.rs
src/runtime/: tx.rs
src/runtime/tx/: op.rs
src/runtime_tests/: control.rs  entry.rs  stream.rs
src/sqlite/: io.rs  lease.rs  op.rs  tests.rs  tx.rs
src/sqlite/op/: entry.rs
src/store/: memory.rs  memory_tests.rs
src/store/memory/: lease.rs  op.rs  tx.rs  validate.rs
src/testkit/: entry.rs
