[package]
name = "typemach"
version = "0.1.0"
edition = "2024"
description = "Typed agent machine runtime with checkpoint, interrupt, resume, and cancellation"
license = "MIT OR Apache-2.0"

[features]
default = []
postgres = ["dep:deadpool-postgres"]

[dependencies]
async_rt = { package = "tokio", version = "1", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tracing = "0.1"
thiserror = "2"
deadpool-postgres = { version = "0.14", optional = true }

[dev-dependencies]
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
