[package]
name = "typemach-agent"
version = "0.1.0"
edition = "2024"
description = "Reusable Rust agent runtime built on typemach"
license = "MIT OR Apache-2.0"

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
typemach = { path = "../.." }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
