[package]
name = "typemach-agent"
version = "0.1.0"
edition = "2024"
description = "Reusable Rust agent runtime built on typemach"
license = "MIT OR Apache-2.0"

[dependencies]
async-trait = "0.1"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["sync", "macros", "rt", "time"] }
typemach = { path = "../.." }

[dev-dependencies]
tokio = { version = "1", features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "sync", "time"] }
